--- a/content/ees211.md
+++ b/content/ees211.md
@@ -45,16 +45,17 @@ title: "EES211 2.0 Data Analysis and Modeling"
 
 [Slides](/ees211/clustering.html)
 
-## Week 12
+## Week 12-14
 
 [Slides](/ees211/machine_learning.html)
 
 
-## Week 13
-
-## Week 14
-
 ## Week 15
+
+[Slides](/ees211/poly.html)
+
+
+
 
 
 
