--- a/content/ees211.md
+++ b/content/ees211.md
@@ -3,6 +3,8 @@ date: "2022-05-05T21:48:51-07:00"
 title: "EES211 2.0 Data Analysis and Modeling"
 ---
 
+
+
 ## Week 1-2: 7 July 2022/ 14 July 2022
 
 [Slides](/ees211/ees211_1.html/)
@@ -39,8 +41,6 @@ title: "EES211 2.0 Data Analysis and Modeling"
 [Slides ](/regression/regression10_ees.html)
 
 
-
-
 ## Week 10-11
 
 [Slides](/ees211/clustering.html)
@@ -55,6 +55,8 @@ title: "EES211 2.0 Data Analysis and Modeling"
 [Slides](/ees211/poly.html)
 
 
+
+[Course outline](/ees211/co.pdf)
 
 
 
